--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,13 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Build Next.js app
+      run: npm run build
     - name: Run Playwright tests
       run: npx playwright test
+      env:
+        TEST_USER_EMAIL: ${{ secrets.E2E_TEST_USER_EMAIL }}
+        TEST_USER_PASSWORD: ${{ secrets.E2E_TEST_USER_PASSWORD }}
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
